Showcase is implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,63 @@
-<canvas id="Matrix"></canvas>
-<span>hi</span>
+<canvas id="Matrix">
+</canvas>
+<div class="container">
+    <div class="first-section">
+        <h3>How Epam Systems and Nurullah matched?</h3>
+        <div class="container">
+            <div class="first-section">
+                <div class="image-container">
+                    <img class="image" src="https://companieslogo.com/img/orig/EPAM_BIG-4adfe242.png?t=1720244491"/>
+                </div>
+                <div class="text-container">
+                    <ul>
+                        <li>EPAM Systems helped more than 295 Forbes Global 2000 clients in the following industries solve their most complex challenges.</li>
+                        <li>Active in 55 different countries around the world, EPAM Systems works with the most competent people globally.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="second-section">
+                <div class="image-container">
+                    <img class="image" src="https://cdn-icons-png.flaticon.com/512/6840/6840478.png"/>
+                </div>
+                <div class="text-container">
+                    <ul>
+                        <li>While working at Adesso and Proxify, I solved complex problems in global companies more than 6 years. Our partner website apollo.de receives more than 1 million traffic.</li>
+                        <li>Proxify hires world-class remote developers worldwide and promotes me on its website. You can look at the website https://proxify.io.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="second-section">
+        <h3>How this role and Nurullah matched?</h3>
+        <div class="container">
+            <div class="first-section">
+                <div class="image-container">
+                    <img class="image" src="https://companieslogo.com/img/orig/EPAM_BIG-4adfe242.png?t=1720244491"/>
+                </div>
+                <div class="text-container">
+                    <ul>
+                        <li>Strong proficiency in JavaScript and experience with Angular</li>
+                        <li>Experience with Amazon Web Services (AWS)</li>
+                        <li>Strong communication and collaboration abilities</li>
+                        <li>Collaborate with cross-functional teams to define, design, and ship new features</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="second-section">
+                <div class="image-container">
+                    <img class="image" src="https://cdn-icons-png.flaticon.com/512/6840/6840478.png"/>
+                </div>
+                <div class="text-container">
+                    <ul>
+                        <li>More than 6+ years of experince in both Javascript and Angular</li>
+                        <li>I host this website on AWS and have set up the CI/CD pipeline</li>
+                        <li>Before starting the interview, I prepared this website for showing my collaboration skills to this interview </li>
+                        <li>I have been working as the Frontend Team Lead in my team, which includes people from 7 different cultures, for 1.5 years and I am the employee responsible for delivery.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
